# robot_ws

./: .gitignore  README.md  README_1.md  Screencast from 2026-02-18 11-38-02.webm  Screencast from 2026-03-17 22-06-01.webm  model.urdf  nav2_warehouse.sdf  turtlebot4.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/ackermann_robot/: README.md  package.xml  setup.py
src/ackermann_robot/ackermann_robot/: baro_converter.py  bev_markers_node.py  calibr.py  package.xml  semantic_bev_fusion_node.py  setup.cfg  setup.py  simple_detector_node.py  visual_odom.py
src/ackermann_robot/config/: amcl.yaml  bridges.yaml  default.rviz  ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_default.yaml  navigate_to_pose_w_backup_recovery.xml
src/ackermann_robot/launch/: ackermann_gazebo.launch.py  navigation.launch.py  rtabmap.launch.py
src/ackermann_robot/maps/: my_map.pgm  my_map.yaml  parking_F1.yaml
src/ackermann_robot/meshes/: chassis_visual.stl  (+3 more)
src/hello_moveit/: package.xml
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/parking_bringup/: CMakeLists.txt  bkp_cmake_lists.txt  setup.cfg  setup.py
src/parking_car/: CMakeLists.txt  setup.cfg  setup.py
src/parking_world/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/parking_world/configs/: bridge_config.yaml  car_bridge.yaml
src/parking_world/launch/: simulation.launch.py  spawn_marble.launch.py
src/parking_world/worlds/: my_world.sdf  nav2_warehouse.sdf
src/ros_gz_sim_demos/: package.xml
src/sam_bringup/: CMakeLists.txt
(+157 files in other folders)
